add 201801231058.gif to 2017-12-29-理解时域_傅立叶级数_滤波等概念

--- a/_posts/2017-12-29-理解时域_傅立叶级数_滤波等概念.md
+++ b/_posts/2017-12-29-理解时域_傅立叶级数_滤波等概念.md
@@ -20,6 +20,10 @@ tags: 数学
 * 傅里叶级数：将一个周期的信号分解成无限多分开的正弦波（离散的）     
 * 傅里叶变换：将一个时域非周期的连续信号，转换为一个在频域非周期的连续信号（连续的）     
 
+### 
+![这里写图片描述](/images/post/2017-12-29-理解时域_傅立叶级数_滤波等概念/201801231058.gif)
+
+
 ### 滤波    
 简单点说就是将不需要的频率分量去掉，留下有用的，在动画中就是你从频域的角度去看将不需要的正弦线拿掉，而你从时域看的话只能看到所有正弦线的叠加，是很难得将每一条正弦线分开的，自然更别提拿掉不需要的正弦线了，这也是为什么你在很多工科的书上总能看到频域滤波这个概念。滤波是一个很重要的概念，我目前接触过的就是数字信号处理，图像处理中经常提到滤波这个概念，好像自动控制也有吧。    
 
