2017-12-29-理解时域_傅立叶级数_滤波等概念.md '###' format

--- a/_posts/2017-12-29-理解时域_傅立叶级数_滤波等概念.md
+++ b/_posts/2017-12-29-理解时域_傅立叶级数_滤波等概念.md
@@ -20,7 +20,7 @@ tags: 数学
 * 傅里叶级数：将一个周期的信号分解成无限多分开的正弦波（离散的）     
 * 傅里叶变换：将一个时域非周期的连续信号，转换为一个在频域非周期的连续信号（连续的）     
 
-### 
+### 动画演示
 ![这里写图片描述](/images/post/2017-12-29-理解时域_傅立叶级数_滤波等概念/201801231058.gif)
 
 
