--- a/_posts/2018-01-07-差分电流.md
+++ b/_posts/2018-01-07-差分电流.md
@@ -26,9 +26,10 @@ tags: PCB
 
     ![20180107](/images/post/2018-01-07-差分电流/2018-01-06-典型的差分电路.png)     
 
-### 问题引入   
-    针对差分电路而言，理想情况下两个信号大小相等且方向相反,但在实际情况中是不可能做到的。原因如下：     
-        * 驱动器有偏移（时序不完全相同）
-        * 导体长度不完全相等
-        * 传播时间不同（导体所处环境不同）
-    由此走线上的两个信号的‘差’有可能不为零，
+### 问题引入
+* 针对差分电路而言，理想情况下两个信号大小相等且方向相反,但在实际情况中是不可能做到的。原因如下：     
+    * 驱动器有偏移（时序不完全相同）   
+    * 导体长度不完全相等   
+    * 传播时间不同（导体所处环境不同）    
+
+    因此走线上的两个信号的‘差’不可能始终为零，
