--- a/_posts/2018-01-07-PCB走线问题.md
+++ b/_posts/2018-01-07-PCB走线问题.md
@@ -4,55 +4,83 @@ title: PCB走线问题
 date: 2018-01-07 
 tags: PCB  
 ---
+
 ### 本文中心
-    在电路中通过模式转换会引入共模电流，而对于共模电流，我们必须知道如何避免引入它，或者知道它的回流路径。
+    在差分电路中的差模信号会通过模式转换变成共模信号，而对于共模信号，在PCB走线中如何避免引入它。
 
+### 关系图
+```
+@>返回信号   
+    |--->单端电路   
+    |       |@> 信号从地或电源返回   
+    |   
+    |--->差分电路   
+            |--->共模信号   
+            |       |@> 信号从其它地方返回   
+            |   
+            |--->差模信号   
+                    |@> 信号从一条线上发出从另一条线上返回   
+```
+>在单端电路中信号从驱动器出发，从地或电源返回，基本没什么问题。
+>正常情况下我们希望在差分电路上走差模信号（理想情况下是这样），但实际情况下，由于各种原因导致在差分电路上走的差模信号有一部分会转变成共模信号
 ### 基本概念
-#### 返回信号    
-    PCB上每一个信号的流向如下图所示，从驱动器上出发到达接收器之后**必须**回到驱动器。信号从接收器返回驱动器时即称为返回信号。
-
+#### 返回信号
+PCB上每一个信号的流向如下图所示，从驱动器上出发到达接收器之后**必须**回到驱动器。信号从接收器返回驱动器时即称为返回信号。   
     ![20180107](/images/post/2018-01-07-PCB走线问题/2018-01-07-PCB中信号的流向.png)  
-
-    * 信号回流路径  
+* 信号回流路径  
     信号回流路径指的是返回信号所走的路径，有时候在设计中我们必须考虑信号回流的问题。
-
 > 信号回流路径是我们考虑PCB走线问题的关键。本文所有的讨论都是围绕回流路径展开的。
 
-#### 电路：
-    * 单端电路   
-        信号从地或电源返回到驱动器的电路称为单端电路。  
-
+#### 单端电路
+信号从地或电源返回到驱动器的电路称为单端电路。  
     ![20180107](/images/post/2018-01-07-PCB走线问题/2018-01-06-典型的单端电路.png)  
 
-    * 差分电路   
-        在驱动器和接收器之间载有大小相等方向相反的互补信号的电路称为差分电路。
-        * 差分电路是具有“对共模信号抑制，对差模信号放大”特征的电路。      
-        * 两个信号从输入端输入，将两个信号的差值作为电路的有效输入信号，电路的输出是有效输入信号的放大，也就是对这两个输入信号之差的放大。   
-        * 如果存在干扰信号，会对两个输入信号产生相同的干扰，通过二者之差，干扰信号的有效输入为零，这就达到了抗共模干扰的目的。    
-        * 差分电路常常用于信号水平非常低的情况   
-
+#### 差分电路   
+在驱动器和接收器之间载有大小相等方向相反的互补信号的电路称为差分电路。   
+    * 差分电路是具有“对共模信号抑制，对差模信号放大”特征的电路。      
+    * 两个信号从输入端输入，将两个信号的差值作为电路的有效输入信号，电路的输出是有效输入信号的放大，也就是对这两个输入信号之差的放大。   
+    * 如果存在干扰信号，会对两个输入信号产生相同的干扰，通过二者之差，干扰信号的有效输入为零，这就达到了抗共模干扰的目的。    
+    * 差分电路常常用于信号水平非常低的情况   
     ![20180107](/images/post/2018-01-07-PCB走线问题/2018-01-06-典型的差分电路.png)     
-
-#### 信号：
-    * 共模信号   
-    信号从两条线上发出，从其他地方返回
-
+   
+#### 共模信号   
+信号从两条线上发出，从其他地方返回   
     ![20180125](/images/post/2018-01-07-PCB走线问题/2018-01-25-共模信号.png)
+>对于很多共模信号，我们不知道它是从哪里返回的，所以在电路中如果存在共模信号，则有可能是一个隐患，应该避免引入电路或系统中。
+#### 差模信号  
+信号从一条线上发出，从另一条线上返回   
+    ![20180125](/images/post/2018-01-07-PCB走线问题/2018-01-25-差模信号.png)  
+>在实际情况中，差分电路上走的信号既有差模信号，也有共模信号。本文所讨论的就是在差分电路上如何避免引入共模信号。
 
-    * 差模信号  
-    信号从一条线上发出，从另一条线上返回
 
-    ![20180125](/images/post/2018-01-07-PCB走线问题/2018-01-25-差模信号.png)
+### 在差分电路上的差模信号中为什么会有一部分转变成共模信号？  
+理想情况下，差分电路上的差模信号在任意时刻都大小相等，方向相反。如下图所示：（绿线代表了差模信号的返回电流）
+    ![20180125](/images/post/2018-01-07-PCB走线问题/2018-01-06-差分信号对ex.png)   
 
-> * 在单端电路上走的是共模信号，而且我们知道该共模信号是从地（参考平面）或电源返回到驱动器。
-> * 在实际情况中，差分电路上走的信号既有差模信号，也有共模信号。本文所讨论的就是在差分电路上如何避免引入共模信号。
+但如果两个信号有**偏移**，即其中一个信号的时序滞后或者超前了（俗话说的错位了），如下图所示：     
+    ![20180125](/images/post/2018-01-07-PCB走线问题/2018-01-26-差分信号对.png)   
+    从图中可以看到，   
+        * 当两个信号方向相反（一正一负）时,属于差模信号，返回电流为零。    
+        * 当两个信号方向相同（同为正或同为负）时，属于共模信号，返回电流不为零。
+> 特别说明：上图是数字电路的理想波形,忽略了高、低电平转换所需的建立时间，实际情况稍复杂些，还需考虑两个信号的大小不相等的情况。
 
-### 问题引入
-* 针对差分电路上的差模信号而言，理想情况下两个信号大小相等且方向相反,但在实际情况中是不可能做到的。原因如下：     
+
+实际情况下，再好的差分驱动器在其正和负输出端也会有偏移，做不到绝对的零偏移。即使驱动器输出端没有偏移，走线的长度不同也会导致偏移。再或者走线长度也绝对的相等，但你也不能保证信号的传播速度也相同，比如走线所处的环境以及两条走线的大小，材质完全相同。就如戈特弗里德·威廉·莱布尼茨所说的那样
+> 世界上没有两片完全相同的树叶
+
+* 两条线所处的环境不同  
+    ![20180125](/images/post/2018-01-07-PCB走线问题/2018-01-26-走线.png)   
+
+* 通过走线长度控制信号时序，减少偏移   
+    ![20180125](/images/post/2018-01-07-PCB走线问题/2018-01-26-调整走线.png)   
+
+所以整理以下，由以下三个原因而导致差模信号产生偏移，从而引入了共模信号   
     * 驱动器有偏移（时序不完全相同）   
     * 导体长度不完全相等   
-    * 传播时间不同（导体所处环境不同）    
+    * 传播时间不同（导体所处环境不同）  
 
-    因此两条走线上的信号相减不可能始终为零。当不为零时，这个净信号（两个信号相减后所得的信号）是单向的，属于共模信号。
-#### 问题：在差分电路上的共模信号从哪里返回呢？
+
+
+> * 以上内容为个人学习心得，如有论述不当，还望不吝赐教。  
+> * 很多论述在某种程度上是对的，这取决于你所在的角度以及前提条件是什么。  
 
