--- a/_posts/2017-12-28-VAssistX自定义注释中文乱码.md
+++ b/_posts/2017-12-28-VAssistX自定义注释中文乱码.md
@@ -7,7 +7,7 @@ tags: 问题解决
 
 ### 问题描述
 在VS2017中VAssistX插件中用中文自定义的代码块（更多的是各种注释）在编程时变为乱码，改成中文后再次编程时还是乱码，而且打开插件后原来的中文又变成了乱码（如下图所示）。
-![这里写图片描述](/images/post/2017-12-28-VAssistX自定义注释中文乱码/20170623142201660.png)
+![box3](/images/post/2017-12-28-VAssistX自定义注释中文乱码/20170623142201660.png)
 ### 问题原因
 一般对于国外的软件出现乱码可能的原因就是语言的问题当然也可能是编码的问题，所以可从这两方面寻找问题的原因。
 ### 问题解决
