--- a/_posts/2017-12-29-VMware虚拟机系统无法启动.md
+++ b/_posts/2017-12-29-VMware虚拟机系统无法启动.md
@@ -8,7 +8,7 @@ tags: 问题解决
 ### 问题描述   
 在VMware虚拟机中启动自己安装的虚拟系统如Ubuntu、CentOs、RedHat等，弹出以下错误信息   
 
-![20160510](/images/post/2017-12-29-VMware虚拟机系统无法启动/20160510185802273-1.png)
+![box3](/images/post/2017-12-29-VMware虚拟机系统无法启动/20160510185802273-1.png)
 
 ### 问题原因   
 看错误信息的最后一行   
@@ -23,4 +23,4 @@ tags: 问题解决
     注：为了避免以后再次遇到该问题，可选择右键单击，选择`属性`，将`启动类型`改为`自动`或者`自动(延迟启动)`    
 
 
-![20160510](/images/post/2017-12-29-VMware虚拟机系统无法启动/20160510191301653-2.png)
+![box3](/images/post/2017-12-29-VMware虚拟机系统无法启动/20160510191301653-2.png)
