--- a/_posts/2017-12-11-git使用进阶.md
+++ b/_posts/2017-12-11-git使用进阶.md
@@ -38,6 +38,8 @@ tags: 工具使用
 * 查看版本记录（不包括被删除的commit,显示完整的commit_id）  
     > $ git log                
     > $ git log \-\-pretty=oneline 　　(单行显示)   
+    > $ git log --pretty=oneline --graph    (树形图)
+    > $ gitk (图形界面)
 
 * 查看所有分支的所有版本记录（包括被删除的commit,显示commit_id的前7位）
     > $ git reflog  
@@ -62,8 +64,12 @@ tags: 工具使用
     > $ git branch　　(列出所有分支，"*"表示当前所在的分支)    
 * 切换分支  
     > $ git checkout dev　　(切换到dev分支)   
+    > $ git checkout -b Fixbug   (创建并切换到Fixbug分支)
 * 合并分支  
-    > $ git merge dev 　　(将dev分支合并到当前分支)      
+    > $ git merge dev 　　(将dev分支合并到当前分支)  
+
+    ff 是fast-forward 的意思，--no-ff就是禁用fast-forward，虽然 git merge 的时候会自动判断是否使用fast-farward模式，但是有时候为了更明确，我们还是要加参数--no-ff或者--ff。
+    > $ git merge \-\-no\-ff Fixbug (合并时关闭快速合并)    
 * 合并时冲突   
     * 查看冲突  
         > $ git diff　　(查看哪些文件产生了冲突)  
@@ -82,3 +88,4 @@ tags: 工具使用
 
         ![在工作区中修改](/images/post/2017-12-11-git使用进阶/删除分支2.png)
 
+关于分支的更多信息，可查看 [git分支管理策略](/_posts/2018-01-30-git分支管理策略.md)
