--- a/_posts/2018-01-30-git分支管理策略.md
+++ b/_posts/2018-01-30-git分支管理策略.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: git基本使用
-date: 2017-12-08 
+title: git分支管理策略
+date: 2018-01-30 
 tags: 工具使用  
 ---
 ### git分支管理策略框架  
@@ -30,6 +30,7 @@ tags: 工具使用
 
 
 ### 具体步骤  
+注：如果对以下命令不熟悉或不了解，可以查看 [git使用进阶](/_post/2017-12-11-git使用进阶.md)  
 
 在Master分支下新建并切换到Develop分支  
 > 当前分支：Master   
