--- a/_posts/2018-01-30-git分支管理策略.md
+++ b/_posts/2018-01-30-git分支管理策略.md
@@ -5,10 +5,12 @@ date: 2018-01-30
 tags: 工具使用  
 ---
 ### git分支管理策略框架  
-**在分支管理策略中，以Master/Develop两个分支为主，其它分支为辅助，两个主分支从项目创建开始就将一直存在，其它辅助分支**
-**属于临时性分支，解决特定的问题并合并到相应的分支后即可将其删除。**
+**在分支管理策略中，以Master/Develop两个分支为主，其它分支为辅助，两个主分支从项目创建开始就将一直存在，其它辅助分支属于临时性分支，解决特定的问题并合并到相应的分支后即可将其删除。**
+
 
 ![box3](/images/post/2018-01-30-git分支管理策略/20180130_1.jpeg)   
+
+
 
 各个分支的作用及相互之间的关系如上图所示，以游戏《荒野行动》为例：  
 * Feature分支：在这个分支下给《荒野行动》添加新的功能，比如加个95式突击步枪或者加个练习靶场什么的，一个Feature分支对应一个功能
@@ -26,11 +28,12 @@ tags: 工具使用
 6. 在玩家体验时发现有闪退的现象，为了解决这个bug，我们从Master分支下新建Fixbug或Hotfix分支，用来修复这个bug。
 7. 之后又出现部分玩家在微信无法登录的情况，同样，我们从Master分支下新建Fixbug分支来修复这个bug。
   
+
     ![box3](/images/post/2018-01-30-git分支管理策略/20180130_2.jpeg) 
 
 
 ### 具体步骤  
-注：如果对以下命令不熟悉或不了解，可以查看 [git使用进阶](/_post/2017-12-11-git使用进阶.md)  
+注：如果对以下命令不熟悉或不了解，可以查看 [git使用进阶](https://zhangqunwei.github.io/2017/12/git%E4%BD%BF%E7%94%A8%E8%BF%9B%E9%98%B6/)  
 
 在Master分支下新建并切换到Develop分支  
 > 当前分支：Master   
@@ -41,8 +44,8 @@ tags: 工具使用
 > git branch Feature-练习靶场       
 > git branch Feature-狙击大作战  
 
-‘练习靶场’和‘狙击大作战’两个分支操作一样，需要注意的是两个分支是并行且独立的，开发进度各不相同，只是在功能开发完成以后都需要合并到Develop分支  
-以‘练习靶场’为例  
+‘练习靶场’和‘狙击大作战’两个分支操作一样，需要注意的是两个分支是并行且独立的，开发进度各不相同，只是在功能开发完成以后都需要合并到Develop分支,以‘练习靶场’为例：  
+
 首先切换到练习靶场这个分支，进行开发  
 > git checkout Feature-练习靶场  
 
@@ -79,18 +82,20 @@ tags: 工具使用
 
 
 ### 总结
-Q:你可能会问一个项目开发用一个master分支就可以了，为什么要弄这么多的分支，换来换去的岂不是更麻烦？   
-A:本文所提的分支管理策略其重点在于`并行开发`或`模块式开发`,各个分支各司其职，避免互相干扰和影响。   
+   Q：你可能会问一个项目开发用一个master分支就可以了，为什么要弄这么多的分支，换来换去的岂不是更麻烦？   
+   A：本文所提的分支管理策略其重点在于`并行开发`或`模块式开发`,各个分支各司其职，避免互相干扰和影响。   
+
 比如考虑这样一个场景，《荒野行动》发布后你希望给它添加一些新的玩法，但是由于是刚发布，游戏出现了很多bug。   
-    如果现在你只有一个master分支，那你不得不先去修复这些bug然后再去添加新玩法，所有的工作都必须在master一个分支上完成。如果bug一直没有被修复，那势必会影响到你后面的开发进度。  
-    如果按照本文所说的策略，你可以在Feature分支下添加新玩法，同时在Fixbug分支下去修复bug，两者各司其职互补干扰，即使bug一直没有被修复，也不会影响你新玩法的开发进度。
+如果现在你只有一个master分支，那你不得不先去修复这些bug然后再去添加新玩法，所有的工作都必须在master一个分支上完成。如果bug一直没有被修复，那势必会影响到你后面的开发进度。  
+如果按照本文所说的策略，你可以在Feature分支下添加新玩法，同时在Fixbug分支下去修复bug，两者各司其职互补干扰，即使bug一直没有被修复，也不会影响你新玩法的开发进度。
 
 
-#### 参考：
-原始作者：
-* http://nvie.com/posts/a-successful-git-branching-model/
-他人解读：
-* http://blog.jobbole.com/109466/
+**参考：**   
+原始作者：   
+* [http://nvie.com/posts/a-successful-git-branching-model/](http://nvie.com/posts/a-successful-git-branching-model/)   
+
+他人解读：   
+* [http://blog.jobbole.com/109466/](http://blog.jobbole.com/109466/)   
 
 > 本文是参考以上两人的观点再加上自己的理解所写，有很多地方如果不理解的话可以看看原始作者所写的。
 
